service.yml
apiVersion: v1
kind: Service
metadata:
  name: lab05-service
spec:
  selector:
    app: lab05
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
