ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab05
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: lab05.loc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lab05-service
                port:
                  name: http
